[gd_scene load_steps=5 format=3 uid="uid://bh2pgi28wrmcv"]

[ext_resource type="Script" path="res://Player.gd" id="1_vv74r"]
[ext_resource type="PackedScene" uid="uid://u1h3wojwxbf7" path="res://UI/HUD.tscn" id="2_4jxrv"]
[ext_resource type="PackedScene" uid="uid://cqwtijaej0fub" path="res://UI/Buy_Menu.tscn" id="3_f27ww"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_plipg"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_vv74r")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_plipg")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.649182, -0.4817)
current = true
fov = 100.0

[node name="WeaponSpatial" type="Node3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.83176, -0.649182, -1.22633)

[node name="AbilitySpatial" type="Node3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, -1.25)

[node name="RayCast3d" type="RayCast3D" parent="Camera"]
target_position = Vector3(0, 0, -100)

[node name="HUD" parent="." instance=ExtResource("2_4jxrv")]

[node name="Buy_Menu" parent="." instance=ExtResource("3_f27ww")]
visible = false
